# table-test

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
examples/: add.rs  custom_comments.rs  failed_test.rs  multiple_inputs.rs  multiple_outputs.rs  mutable_struct.rs
scripts/: coverage.sh  examples_output_to_png.sh  style.css
src/: formater.rs  lib.rs  macros.rs  table.rs  validator.rs
src/formater/: colorful_formater.rs  formater.rs  mock.rs  mod.rs
src/test_case/: asserter.rs  mod.rs  test_case.rs
src/validator/: asserter.rs  mod.rs  test_structure.rs  validator.rs
src/validator/test_structure/: given_when_then.rs  mod.rs
tests/: integration_test.rs
