[package]
name = "table-test"
version = "0.2.0"
authors = ["nathaniel <nathaniel.simard@outlook.com>"]
description = "Improve table testing in Rust"
repository = "https://github.com/nathanielsimard/table-test"
license = "MIT"
readme="README.md"
exclude = [
    "scripts/*",
    "examples_outputs/*"
]

[dependencies]
ansi_term = "0.9"
difference = "2.0"
