[package]
name = "table-test"
version = "0.2.1"
authors = ["nathanielsimard <nathaniel.simard@outlook.com>"]
description = "Improve table testing in Rust"
repository = "https://github.com/nathanielsimard/table-test"
license = "MIT"
readme="README.md"
keywords = ["unit-test", "testing", "integration-test"]
categories = ["development-tools::testing"]
exclude = [
    "scripts/*",
]

[dependencies]
ansi_term = "0.9"
difference = "2.0"

[dev-dependencies]
mock-it = "0.1.0"
